--- a/00_Environment_Setup.ipynb
+++ b/00_Environment_Setup.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ap-southeast-1\n",
+      "Stored 'region' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "session = boto3.Session(region_name=None)  # To set a specific region, replace None with e.g. \"us-east-1\"\n",
     "region = session.region_name  # We'll save the configured region to initialize later notebooks\n",
@@ -97,12 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "090247010259-ap-southeast-1-personalizepocvod1\n",
+      "Stored 'bucket_name' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "# Choose a source data bucket name:\n",
-    "bucket_name = \"{}-{}-personalizepocvod\".format(\n",
+    "bucket_name = \"{}-{}-personalizepocvod1\".format(\n",
     "    session.client(\"sts\").get_caller_identity().get(\"Account\"),\n",
     "    region,\n",
     ")\n",
@@ -118,9 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'export_bucket_name' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "# We'll assume any exports can go in the same bucket:\n",
     "\n",
@@ -144,9 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added policy to 090247010259-ap-southeast-1-personalizepocvod1\n"
+     ]
+    }
+   ],
    "source": [
     "for bucket in set((bucket_name, export_bucket_name)):\n",
     "    policy = {\n",
@@ -189,11 +223,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:iam::090247010259:role/PersonalizeRolePOC1\n",
+      "Stored 'personalize_role_arn' (str)\n"
+     ]
+    }
+   ],
    "source": [
-    "personalize_role_name = \"PersonalizeRolePOC\"\n",
+    "personalize_role_name = \"PersonalizeRolePOC1\"\n",
     "\n",
     "create_role_response = iam.create_role(\n",
     "    RoleName=personalize_role_name,\n",
@@ -219,7 +262,7 @@
     "# but we just want it for the Forecast permissions themselves:\n",
     "iam.attach_role_policy(\n",
     "    RoleName=personalize_role_name,\n",
-    "    PolicyArn=\"arn:aws:iam::aws:policy/AmazonPersonalizeFullAccess\",\n",
+    "    PolicyArn=\"arn:aws:iam::aws:policy/service-role/AmazonPersonalizeFullAccess\"\n",
     ")\n",
     "\n",
     "# By default (since we're experimenting), this code attaches over-generous S3 permissions (full access):\n",
@@ -299,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
