--- a/02a_Importing_Data_(Console).ipynb
+++ b/02a_Importing_Data_(Console).ipynb
@@ -129,9 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:iam::090247010259:role/PersonalizeRolePOC1\n"
+     ]
+    }
+   ],
    "source": [
     "%store -r\n",
     "print(personalize_role_arn)"
@@ -150,9 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s3://090247010259-ap-southeast-1-personalizepocvod1/poc_data/interactions.csv\n"
+     ]
+    }
+   ],
    "source": [
     "%store -r\n",
     "print(interactions_s3uri)"
@@ -255,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s3://090247010259-ap-southeast-1-personalizepocvod1/poc_data/item-meta.csv\n"
+     ]
+    }
+   ],
    "source": [
     "%store -r\n",
     "print(items_s3uri)"
@@ -316,12 +340,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CHECK:\n",
-    "dataset_group_name = \"personalize-poc-lab\""
+    "dataset_group_name = \"personalize-poc-lab1\""
    ]
   },
   {
@@ -333,9 +357,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:personalize:ap-southeast-1:090247010259:dataset-group/personalize-poc-lab1\n",
+      "Stored 'dataset_group_arn' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "%store -r\n",
     "\n",
@@ -384,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
