--- a/04a_Deploying_Campaigns_and_Filters_(Console).ipynb
+++ b/04a_Deploying_Campaigns_and_Filters_(Console).ipynb
@@ -149,11 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'tracking_id' (str)\n"
+     ]
+    }
+   ],
    "source": [
-    "tracking_id = \"12345678-abcd-7890-cdef-1234567890ab\"  # REPLACE ME WITH YOURS!\n",
+    "tracking_id = \"919b4885-af32-46f7-8ba3-5b19bb5bd425\"  # REPLACE ME WITH YOURS!\n",
     "%store tracking_id"
    ]
   },
@@ -298,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
