--- a/06_Clean_Up_Resources.ipynb
+++ b/06_Clean_Up_Resources.ipynb
@@ -11,9 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Group: arn:aws:personalize:ap-southeast-1:090247010259:dataset-group/personalize-poc-lab1\n",
+      "S3 Bucket: 090247010259-ap-southeast-1-personalizepocvod1\n",
+      "IAM Role: arn:aws:iam::090247010259:role/PersonalizeRolePOC1\n"
+     ]
+    }
+   ],
    "source": [
     "# Python Built-Ins:\n",
     "import time\n",
@@ -47,9 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DELETING CAMPAIGN arn:aws:personalize:ap-southeast-1:090247010259:campaign/personalize-movielens-rerank\n",
+      "DELETING CAMPAIGN arn:aws:personalize:ap-southeast-1:090247010259:campaign/personalize-movielens-sims\n",
+      "DELETING CAMPAIGN arn:aws:personalize:ap-southeast-1:090247010259:campaign/personalize-movielens-up\n",
+      "WAITING 4 minutes for campaign deletions to propagate\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "solutions = personalize.list_solutions(\n",
     "    datasetGroupArn=dataset_group_arn,\n",
@@ -87,9 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DELETING EVENT TRACKER arn:aws:personalize:ap-southeast-1:090247010259:event-tracker/ab547bb9\n",
+      "WAITING 30s for tracker deletions to propagate\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "trackers = personalize.list_event_trackers(\n",
     "    datasetGroupArn=dataset_group_arn,\n",
@@ -121,9 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DELETING FILTER arn:aws:personalize:ap-southeast-1:090247010259:filter/watched\n",
+      "DELETING FILTER arn:aws:personalize:ap-southeast-1:090247010259:filter/unwatched\n",
+      "DELETING FILTER arn:aws:personalize:ap-southeast-1:090247010259:filter/by-genre\n",
+      "DELETING FILTER arn:aws:personalize:ap-southeast-1:090247010259:filter/1970s\n",
+      "WAITING 30s for filter deletions to propagate\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "filters = personalize.list_filters(\n",
     "    datasetGroupArn=dataset_group_arn,\n",
@@ -389,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
