--- a/03a_Creating_and_Evaluating_Solutions_(Console).ipynb
+++ b/03a_Creating_and_Evaluating_Solutions_(Console).ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,9 +348,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:personalize:ap-southeast-1:090247010259:solution/personalize-poc-userpersonalization/18d4cb9e\n",
+      "Stored 'up_solution_version_arn' (str)\n",
+      "arn:aws:personalize:ap-southeast-1:090247010259:solution/personalize-poc-sims/ed3ebf43\n",
+      "Stored 'sims_solution_version_arn' (str)\n",
+      "arn:aws:personalize:ap-southeast-1:090247010259:solution/personalize-poc-rerank/d6ddf0c4\n",
+      "Stored 'rerank_solution_version_arn' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "import boto3\n",
     "%store -r\n",
@@ -416,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
